--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-reconciler": "^0.23.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "zustand": "^4.5.6"
   },
   "scripts": {
     "start": "react-scripts start",
